fixing scrollbar

--- a/css/dash.css
+++ b/css/dash.css
@@ -196,6 +196,16 @@ body {
     flex: 1;
     overflow-x: auto;
     white-space: nowrap;
+    scrollbar-color: #d3d3d370 transparent;
+}
+
+/* WebKit browsers (Chrome, Safari) */
+#contact-number::-webkit-scrollbar {
+    width: 3px;
+}
+
+#contact-number::-webkit-scrollbar-thumb {
+    background-color: #d3d3d370;
 }
 
 #contact-email {
@@ -234,21 +244,4 @@ body {
 
 body.modal-open {
     overflow: hidden;
-}
-
-/* For Chrome, Safari, and Edge */
-::-webkit-scrollbar {
-    width: 6px;
-}
-
-::-webkit-scrollbar-track {
-    background: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-    background: rgba(211, 211, 211, 0.5); /* Make the thumb transparent */
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: rgba(211, 211, 211, 0.9); /* Change thumb color slightly on hover */
 }
